Added license type and reference to LICENSE file to the package.json

--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
     "main":"./lib",
     "engines":{
         "node":">=0.6.0"
-    }
+    },
+    "licenses": [
+      {
+        "type": "MIT",
+        "url": "https://raw.github.com/kwhinnery/twilio-node/master/LICENSE"
+      }
+    ]
 }
